
o sim.swn: added a function to simulate small-world networks and data

o PMFG: removed function due to inefficiency

o diversity: added a function to compute the diversity coefficient of nodes in the network

o gateway: added a function to compute the gateway coefficient of nodes in the network

o participation: added a function to compute the participation coefficient of nodes in the network

o edgerep: fixed bug in plot to display the strength of the replicated edges only

o nams: added output for an overall network adjusted mean/sum score

o improved documentation

o added EBICglasso and Isingfit to bootgen and commboot function

o added back the kld and rmse function


Changes in Version 1.1.1

o LoGo: reversed sign bug fixed; cov.shrink no longer used for covariance matrix estimation

o is.graphical: updated with more efficient (inverse) covariance check

o bootgen: uses partial correlation significance for method = "LoGo"


Changes in Version 1.1.0

o new data files: NEO-PI-3 data for psychometric network analysis, verbal fluency files for semantic network analysis, behavioral NEO-PI-3 and an associated brain connectivity array for brain network analysis

o bootgen: no longer produces plots; added is.graphical function to automatically check if network is graphical when method = "LoGo"

o bootgenPlot: output from the bootgen function can now be input into a separate function to obtain plots. Contains an argument to also plot the bootstrapped network generalization method

o bootstrapping functions all include a seeds argument, which can be used to replicate the previous analysis using the Seeds output

o PMFG: now outputs a list to be used in Cytoscape visualization software (sparseList)

o reg: a function to perform regression for a dataset. An argument can set the type of regression and for the matrix to be symmetric

o nams: a function to calculate network adjusted mean or sum for data (based on the hybrid centrality)
