@@ -85,5 +85,6 @@ importFrom(stats,runif)
 importFrom(stats,sd)
 importFrom(stats,t.test)
 importFrom(utils,capture.output)
+importFrom(utils,menu)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
